<resources>
    <string name="app_name">SnackTrack</string>
    <string name="title_activity_snack">Snack</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_snack_screen">SnackScreen</string>
    <string name="Favorites">Favorites</string>
    <string name="Baked">Baked</string>
    <string name="Drink">Drink</string>
    <string name="Fastfood">Fastfood</string>
    <string name="Fruit">Fruit</string>
    <string name="Nuts">Nuts</string>
    <string name="Sweets">Sweets</string>
    <string name="Vegetables">Vegetables</string>


</resources>
